[project]
name = "langchain-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter-server>=2.20.0",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.5",
    "nbclient>=0.11.0",
    "nbformat>=5.10.4",
    "notebook>=7.6.0",
    "python-dotenv>=1.2.2",
]
